[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "embedding_model"
version = "0.0.1"
authors = [{ name = "De Rong", email = "derong97@gmail.com" }]
description = "Embedding Model"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]